--- a/src/base/variables/site-settings.scss
+++ b/src/base/variables/site-settings.scss
@@ -1,3 +1,33 @@
+$site-color: #db697c;
+
 body {
-  background-color: #f791a2;
+  background-color: $site-color;
+  font-family: "Century Gothic", sans-serif;
+  color: white;
+}
+
+.background {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  padding: 0;
+  opacity: 0.3;
+  width: 105%;
+  min-height: 105%;
+}
+
+.button {
+  border-radius: 5px;
+  height: 50px;
+  font-size: 16px;
+  box-shadow: 2px 2px 2px #999999;
+  background-color: white;
+  color: $site-color;
+  padding: 10px;
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: 2px 2px 2px #666666;
+
+  }
 }
